--- a/react-todo-app/src/TodoContainer/Components/ItemDescription/ItemDescription.module.css
+++ b/react-todo-app/src/TodoContainer/Components/ItemDescription/ItemDescription.module.css
@@ -1,10 +1,3 @@
-:root {
-  --primary-color: #6ca0dc;
-  --background-color: #fdfdff;
-  --transition-duration: 0.25s;
-  --borders: rgb(235, 209, 209);
-}
-
 ul,
 li {
   list-style: none;
@@ -15,14 +8,14 @@ li {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  min-height: 80vh;
 }
 
 .button-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* height: 100%; */
+  height: 100%;
   text-align: center;
 }
 
@@ -45,11 +38,11 @@ li {
 }
 
 .button:hover {
-  background-color: #31e163;
+  background-color: #69c0ff;
   transform: scale(1.1);
-  box-shadow: 1px 1px 3px #d96767;
+  box-shadow: 1px 1px 3px #096dd9;
   border: 2px;
-  border-color: #4000ff;
+  border-color: #003a8c;
 }
 
 .title {
@@ -58,26 +51,33 @@ li {
   font-weight: bold;
   display: block;
   padding: 15px;
-  margin-left: 0px;
+  margin-left: 5px;
   padding-left: 5px;
+  text-align: center;
+  justify-content: center;
+  margin-right: 10px;
+}
+
+::placeholder {
   text-align: center;
 }
 
 .text_area {
   margin-top: 10px;
   margin-right: 20px;
-  padding-top: 5px;
+  margin-left: 10px;
+  padding: 5px;
   padding-left: 5px;
   padding-right: 15px;
+  line-height: 1.5;
   content: center;
-  min-height: 60vh;
+  min-height: 55vh;
   width: 330px;
   background-color: var(--background-color);
   outline: none;
   resize: none;
-  /* border: 1px solid var(--borders); */
+  border: 1px solid var(--border-color-base);
   border: none;
-  /* border-right: none; */
   font-size: 14px;
 }
 
