--- a/react-todo-app/src/TodoContainer/Components/Search/Search.module.css
+++ b/react-todo-app/src/TodoContainer/Components/Search/Search.module.css
@@ -2,15 +2,15 @@
   padding: 5px 5px;
   border: 1px solid transparent;
   border-radius: 3px;
-  /* width: 100%;  */
+  width: 100%;
   outline: 0;
-  background-color: #a7c1c8;
-  /* transition: width 2s ; */
-  /* margin-left: 1rem; */
+  background-color: var(--background-color);
+  transition: width 2s;
+  margin-left: 1rem;
 }
 
 .input:hover {
-  /* width: 25%; */
+  width: 75%;
   background-color: #fff;
 }
 
@@ -28,7 +28,7 @@
 
 .search-container button[type="submit"] {
   padding: 5px 10px;
-  background-color: #f1c40f;
+  background-color: var(--background-color);
   border: none;
   border-radius: 3px;
   color: #fff;
