--- a/react-todo-app/src/TodoContainer/TodoContainer.module.css
+++ b/react-todo-app/src/TodoContainer/TodoContainer.module.css
@@ -1,6 +1,6 @@
 /* ----user errors ----*/
 .error {
-  color: red;
+  color: var(--error-color);
   font-size: 1.125rem; /* equivalent to 18px */
   margin-top: 20px;
   margin-bottom: 10px;
@@ -18,19 +18,20 @@
 
 /*--- this is the item description component---*/
 .right_pane {
-  background-color: #f3f3f4;
+  background-color: var(--background-color);
   display: flex;
   justify-content: center;
   align-items: center;
   border: none;
 }
 
-/*--- this the AddForm and TodoList component ---*/
+/*--- AddForm and TodoList component ---*/
 .left_pane {
-  background-color: #fdfdff;
-  /* border: 1px solid #c2c2c2; */
-  border-top: none;
-  border-left: none;
+  background-color: var(--background-color);
+  border: 1px solid var(--border-color-base);
+  border-top: 2px;
+  border-left: 2px;
+  border-right: 2px;
   margin-left: 3rem;
   padding-right: 3rem;
   padding-left: 3rem;
@@ -41,44 +42,41 @@
   text-align: center;
   margin-top: 1rem;
   margin-bottom: 1rem;
-  font-family: "Roboto", sans-serif; /* add a custom font */
+  font-weight: 500;
+  /* font-family: "Roboto", sans-serif; add a custom font */
   text-decoration: none; /* add underline */
   cursor: pointer; /* add cursor on hover */
   transition: all 0.2s ease-in-out; /* add transition effect */
 }
 
 .banner:hover {
-  color: #d61215; /* change text color on hover */
+  color: var(--error-color); /* change text color on hover */
   text-shadow: 3px 2px 3px #68dcc5; /* add text shadow on hover */
   transform: scale(1.1); /* add scale effect on hover */
 }
 
 /*todo list title*/
 .tableId {
-  font-weight: 250;
+  font-weight: 500;
   font-size: 1.4375rem; /* equivalent to 23px */
   padding-top: 5px;
   padding-left: 15px;
   text-align: center;
   margin-top: 1rem;
   margin-bottom: 10px; /* Adds more margin to the bottom */
-  width: 100%; /* Takes up the full width of its container */
+  /* width: 100%; Takes up the full width of its container */
 }
 
 /*Middle pane todoList and ItemDescription components*/
 .todo_container {
   transition: left 0.25s;
-  /* margin-left: 330px; */
-  /* width: calc(100% - 330px); */
-  left: 0;
+  padding-left: 5px;
 }
 .todo_container.active {
-  padding-left: 0; /* Use percentage value */
-  width: 700px;
+  padding-left: 10%; /* Use percentage value */
   overflow: hidden;
   transition: left 0.25s;
   margin-right: 10%; /* Use percentage value */
-  /* margin-left: 330px; */
 }
 
 /*Image Component*/
@@ -105,11 +103,13 @@
 /*Sort button*/
 .sort_button {
   color: #393d40;
-  width: 20px;
-  height: 20px;
+  width: 23px;
+  height: 23px;
   opacity: 1;
   margin-left: 1rem;
-  margin-top: 1rem;
+  margin-top: 1.5rem;
+  margin-bottom: 0rem;
+  border: 1px solid;
   cursor: pointer;
 }
 
@@ -118,40 +118,6 @@
   display: block;
   margin-left: 1rem;
   margin-top: 3px;
-}
-
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  padding-top: 10vh;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 80vh;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.9);
-}
-
-.modal-content {
-  margin: auto;
-  display: block;
-  width: 50%;
-  max-width: 700px;
-  height: auto;
-  max-height: 80%;
-}
-
-/* CSS for close button */
-.close {
-  position: absolute;
-  top: 15px;
-  right: 35px;
-  font-size: 40px;
-  font-weight: bold;
-  color: white;
-  z-index: 1;
-  cursor: pointer;
 }
 
 @media (max-width: 70em) {
