--- a/react-todo-app/src/UI/NavMain/NavMain.module.css
+++ b/react-todo-app/src/UI/NavMain/NavMain.module.css
@@ -6,7 +6,7 @@
 }
 
 .icon_menu:hover {
-  opacity: 0.5;
+  opacity: 0.7;
 }
 
 /*li elements inside of the navBar*/
@@ -19,30 +19,15 @@
   gap: 20px;
 }
 
-/*icon keeps moving down*/
 .menu {
   position: absolute;
   top: 0;
-  left: 50px;
+  left: 40px;
   padding-top: 15px;
 }
 
 /*Navbar container*/
 .nav_container {
-  border-bottom: 1px solid #c2c2c2;
+  border-bottom: 1px solid var(--border-color-base);
   height: 50px;
-}
-
-/*Logo*/
-.Logo {
-  width: 40px;
-  height: 40px;
-}
-
-/*App Name*/
-.app_name {
-  font-size: 24px;
-  font-weight: bold;
-  color: #555;
-  margin-left: 10px;
 }
