--- a/react-todo-app/src/UI/SideBar/SideBar.module.css
+++ b/react-todo-app/src/UI/SideBar/SideBar.module.css
@@ -1,93 +1,111 @@
-/*Icons, just icon_sideBar is being used */
+/* Sidebar module styles */
 
-.icon_menu {
+/* Icons, just icon_sideBar is being used */
+.icon_menu,
+.icon_x,
+.icon_sideBar {
   color: #393d40;
   width: 24px;
   height: 24px;
+  margin-right: 10px;
+  margin-bottom: 15px;
 }
 
-.icon_x {
-  color: #393d40;
+.icon_sideBar:hover {
+  color: #000000;
+  background-color: #bae7ff;
+}
+
+/*sidebar*/
+
+/* This is the CSS code for the sidebar component */
+.nav_menu_items {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.items_sideBar {
+  display: flex;
+  align-items: center;
+  padding: 20px 30px 30px 60px;
+  list-style: none;
+  height: 35px;
+}
+
+.items_sideBar svg {
   width: 24px;
   height: 24px;
+  margin-right: 10px;
+  color: #393d40;
+}
+
+.items_sideBar a {
+  text-decoration: none;
+  color: var(--text-color);
+  font-size: 17px;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 10px;
+  padding: 0 7px;
+  border-radius: 4px;
+}
+
+.items_sideBar a:hover {
+  background-color: #bae7ff;
+  color: #000000;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 35px;
+  flex-direction: column;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
 }
 
 .icon_sideBar {
   color: #393d40;
   width: 24px;
   height: 24px;
+  margin-right: 15px;
 }
 
 .icon_sideBar:hover {
   color: #000000;
 }
 
-/*sidebar*/
-
-/* conditional rendering in the class name inside the nav tag */
-
 .nav_menu_done {
-  background-color: #fdfdff;
+  background-color: var(--sidebar-color);
   width: 250px;
   height: 100vh;
   position: absolute;
-  top: 50px;
+  top: 80px;
   left: -100%;
   transition: left 0.25s;
 }
 .nav_menu_active {
-  /* background-color: #fdfdff; */
-  background-color: #f3f3f4;
+  background-color: var(--background-color);
   width: 250px;
   height: 100vh;
   position: absolute;
-  top: 50px;
+  top: 80px;
   left: 0px;
   transition: right 0.25s;
-  padding-top: 25px;
+  padding-top: 40px;
 }
-
-/* ul inside of nav tag */
-
-.nav_menu_items {
-  width: 100%;
-}
-
-/* li tag with the map method */
-
-.items_sideBar {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  padding: 10px 30px 0px 40px;
-  list-style: none;
-  height: 35px;
-}
-
-.items_sideBar a {
-  text-decoration: none;
-  color: #393d40;
-  font-size: 18px;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  gap: 30px;
-  padding: 0 7px;
-  border-radius: 4px;
-}
-
-.items_sideBar a:hover {
-  background-color: #f0e5cf;
-  width: 100%;
-  color: #000000;
-  cursor: pointer;
-}
-
-/*Media query*/
 
 @media (max-width: 51em) {
   .nav_menu_done {
-    background-color: #fdfdff;
+    background-color: var(--background-color);
     width: 250px;
     height: 100vh;
     position: absolute;
@@ -96,21 +114,33 @@
     transition: left 0.25s;
   }
   .nav_menu_active {
-    /* background-color: #f3f3f4; */
-    background-color: #afc7cd;
+    background-color: var(--background-color);
     width: 250px;
     height: 100vh;
     position: absolute;
-    top: 49px;
+    top: 50px;
     left: 0px;
     transition: right 0.25s;
     padding-top: 25px;
     z-index: 1;
-    border-right: 1px solid var(--borders);
+    border-right: 1px solid var(--border-color-base);
+  }
+
+  .items_sideBar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 15px;
+    height: 40px;
+  }
+
+  .items_sideBar a {
+    font-size: 16px;
+    gap: 8px;
   }
 
   .items_sideBar a:hover {
-    background-color: #a7bfc1;
+    background-color: #bae7ff;
     width: 100%;
     color: #000000;
     cursor: pointer;
