--- a/react-todo-app/src/TodoContainer/Components/ItemDescription/ItemDescription.module.css
+++ b/react-todo-app/src/TodoContainer/Components/ItemDescription/ItemDescription.module.css
@@ -23,11 +23,12 @@ li {
   background-color: var(--primary-color);
   border: 1px;
   color: white;
-  border-radius: 5px;
+  border-radius: 15px;
   padding: 5px;
   margin: auto;
-  width: 12rem;
+  width: 10rem;
   cursor: pointer;
+  font-size: 15px;
   text-align: center; /* Center text horizontally */
   text-decoration: none;
   transition: background-color var(--transition-duration),
@@ -41,8 +42,9 @@ li {
   background-color: #69c0ff;
   transform: scale(1.1);
   box-shadow: 1px 1px 3px #096dd9;
-  border: 2px;
+  /* border: 2px; */
   border-color: #003a8c;
+  border-radius: 25px;
 }
 
 .title {
@@ -55,7 +57,7 @@ li {
   padding-left: 5px;
   text-align: center;
   justify-content: center;
-  margin-right: 10px;
+  margin-right: 30px;
 }
 
 ::placeholder {
@@ -66,8 +68,8 @@ li {
   margin-top: 10px;
   margin-right: 20px;
   margin-left: 10px;
-  padding: 5px;
-  padding-left: 5px;
+  padding: 15px;
+  padding-left: 15px;
   padding-right: 15px;
   line-height: 1.5;
   content: center;
