--- a/react-todo-app/src/UI/NavMain/NavMain.module.css
+++ b/react-todo-app/src/UI/NavMain/NavMain.module.css
@@ -1,4 +1,4 @@
-/*Icon menu*/
+/* Icon menu
 .icon_menu {
   stroke: rgba(52, 49, 49, 0.975);
   width: 24px;
@@ -30,4 +30,4 @@
 .nav_container {
   border-bottom: 1px solid var(--border-color-base);
   height: 50px;
-}
+} */
