--- a/react-todo-app/src/App.module.css
+++ b/react-todo-app/src/App.module.css
@@ -11,7 +11,7 @@
   grid-template-rows: 50px 1fr;
   height: 100vh;
   width: 100vw;
-  grid-template-areas: "todoCont_left_pane_sideBar";
+  /* grid-template-areas: "todoCont_left_pane_sideBar"; */
 }
 
 .todoCont_MainNav {
@@ -27,8 +27,8 @@
 
 .todoCon_middle_pane_todoList {
   /* background-color: var(--background-color); */
-  padding-left: 55px;
-  position: relative;
+  /* padding-left: 55px; */
+  /* position: relative; */
 }
 
 /*Try moving middle pane when the sidebar appears*/
@@ -88,9 +88,9 @@
 
   .todoCon_middle_pane_todoList {
     /* background-color: var(--background-color); */
-    grid-row: 2/ -1;
-    padding-left: 1px;
-    position: relative;
+    /* grid-row: 2/ -1; */
+    /* padding-left: 1px; */
+    /* position: relative; */
   }
 
   .todoCont_left_pane_sideBar {
