--- a/react-todo-app/src/TodoContainer/TodoContainer.module.css
+++ b/react-todo-app/src/TodoContainer/TodoContainer.module.css
@@ -23,18 +23,20 @@
   justify-content: center;
   align-items: center;
   border: none;
+  margin-left: 20px;
+  padding-left: 20px;
 }
 
 /*--- AddForm and TodoList component ---*/
 .left_pane {
   background-color: var(--background-color);
-  border: 1px solid var(--border-color-base);
+  /* border: 1px solid var(--border-color-base);
   border-top: 2px;
   border-left: 2px;
-  border-right: 2px;
+  border-right: 2px; */
   margin-left: 3rem;
-  padding-right: 3rem;
-  padding-left: 3rem;
+  padding-right: auto;
+  padding-left: auto;
 }
 
 .banner {
@@ -70,7 +72,7 @@
 /*Middle pane todoList and ItemDescription components*/
 .todo_container {
   transition: left 0.25s;
-  padding-left: 5px;
+  padding-left: 2rem;
 }
 .todo_container.active {
   padding-left: 10%; /* Use percentage value */
@@ -106,11 +108,17 @@
   width: 23px;
   height: 23px;
   opacity: 1;
-  margin-left: 1rem;
   margin-top: 1.5rem;
-  margin-bottom: 0rem;
+  margin-bottom: 0.5rem;
   border: 1px solid;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /*------ loading text -------*/
