--- a/react-todo-app/src/UI/SideBar/SideBar.module.css
+++ b/react-todo-app/src/UI/SideBar/SideBar.module.css
@@ -19,7 +19,7 @@
 /*sidebar*/
 
 /* This is the CSS code for the sidebar component */
-.nav_menu_items {
+/* .nav_menu_items {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -160,4 +160,4 @@
   .nav_menu_active {
     height: 128%;
   }
-}
+} */
