--- a/react-todo-app/src/index.css
+++ b/react-todo-app/src/index.css
@@ -34,27 +34,27 @@ a {
 
 /*Fonts*/
 
-/* @font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
+@font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
   'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
-  'Noto Color Emoji'; */
+  'Noto Color Emoji';
 
-@font-face {
+/* @font-face {
   font-family: "SF Pro";
   src: url("/Library/Fonts/SF-Pro-Text-Regular.otf") format("opentype");
   font-weight: normal;
   font-style: normal;
-}
+} */
 
 body {
-  font-family: "SF Pro", sans-serif;
+  font-family: "Segoe UI", sans-serif;
 }
 
-/* @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&family=Roboto:wght@100&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&family=Roboto:wght@100&display=swap");
 
 /*Universal style*/
 * {
   margin: 0;
   padding: 0;
-  font-family: "SF Pro", Arial;
+  font-family: "Segoe UI", Arial;
   box-sizing: border-box;
 }
