--- a/react-todo-app/src/TodoContainer/Components/TodoListItem/TodoListItem.module.css
+++ b/react-todo-app/src/TodoContainer/Components/TodoListItem/TodoListItem.module.css
@@ -67,7 +67,7 @@
   justify-content: center;
   padding-top: 20px;
   flex: 1;
-}
+}git status .item_textgit status {}
 
 .item_text:hover {
   opacity: 0.7;
@@ -89,7 +89,7 @@
 
 /* -----input tag this css triggers when the user wants to edit a task -----*/
 
-.edit_input {
+.ant_edit {
   background-color: var(--background-color);
   border: none;
   outline: none;
@@ -98,7 +98,7 @@
   color: black;
   font-weight: bold;
   padding: 8px 8px 5px;
-  font-size: 15px;
+  font-size: 12px;
   word-wrap: break-word;
   overflow-wrap: break-word;
   white-space: pre-wrap;
@@ -107,6 +107,10 @@
   word-break: break-all;
   flex: 1;
   flex-direction: column;
+  border: solid 1px;
+  background-color: white;
+  border-radius: 0px;
+  padding: 0px 4px 0px;
 }
 
 .edit_text {
@@ -129,7 +133,7 @@
   width: 100%;
   overflow: auto;
   align-self: flex-start;
-  /* flex: 1; */
+  flex: 1;
   flex-direction: column;
 }
 
@@ -148,17 +152,14 @@
   margin-bottom: 15px;
 }
 
-
-
- @media (max-width: 25em) {
+@media (max-width: 25em) {
   .listItem {
     padding-top: 1px;
   }
-} 
+}
 
- @media (max-width: 68em) {
+/* @media (max-width: 68em) {
   .form {
-    position: absolute;
     left: 2.5rem;
   }
-}
+} */
