--- a/react-todo-app/src/TodoContainer/Components/ItemDescription/ItemDescription.module.css
+++ b/react-todo-app/src/TodoContainer/Components/ItemDescription/ItemDescription.module.css
@@ -25,7 +25,7 @@ li {
   color: white;
   border-radius: 15px;
   padding: 5px;
-  margin: auto;
+  margin: 30px auto;
   width: 10rem;
   cursor: pointer;
   font-size: 15px;
