--- a/react-todo-app/src/TodoContainer/Components/Search/Search.module.css
+++ b/react-todo-app/src/TodoContainer/Components/Search/Search.module.css
@@ -1,12 +1,12 @@
 .input {
   padding: 3px;
   border: 1px solid transparent;
-  border-radius: 5px;
+  border-radius: 3px;
   width: 100%;
-  /* outline: 0; */
+  outline: 0;
   background-color: var(--background-color);
   transition: width 1s;
-  margin: 100px auto auto 20;
+  margin: 40px auto auto 20;
   color: black;
   text-align: center;
   padding: 5px;
