--- a/react-todo-app/src/TodoContainer/Components/TodoListItem/TodoListItem.module.css
+++ b/react-todo-app/src/TodoContainer/Components/TodoListItem/TodoListItem.module.css
@@ -6,7 +6,7 @@
   color: var(--text-color);
   font-size: 14px;
   font-weight: 500;
-  min-height: 10px; /* set minimum height */
+  min-height: 20px; /* set minimum height */
   justify-content: space-between;
   border-bottom: 1px solid var(--border-color-base);
   border-radius: 3px;
@@ -18,7 +18,6 @@
   gap: 10px;
   width: 100%;
   flex: 1;
-  /* margin-bottom: 5px; */
   text-align: left;
 }
 .listItem > * {
@@ -65,9 +64,9 @@
   flex: 1;
   align-items: center;
   justify-content: center;
-  padding-top: 20px;
+  padding-top: 10px;
   flex: 1;
-}git status .item_textgit status {}
+}
 
 .item_text:hover {
   opacity: 0.7;
@@ -81,6 +80,8 @@
   height: 20px;
   opacity: 1;
   cursor: pointer;
+  display: flex;
+  flex-direction: column;
 }
 
 .icons:hover {
@@ -89,12 +90,11 @@
 
 /* -----input tag this css triggers when the user wants to edit a task -----*/
 
-.ant_edit {
+.edit_input {
   background-color: var(--background-color);
-  border: none;
+  /* border: none; */
   outline: none;
   width: 100%;
-  max-width: 100%;
   color: black;
   font-weight: bold;
   padding: 8px 8px 5px;
@@ -102,19 +102,19 @@
   word-wrap: break-word;
   overflow-wrap: break-word;
   white-space: pre-wrap;
-  flex-grow: 1;
-  min-height: 35px;
+  overflow: auto;
+  min-height: 30px;
   word-break: break-all;
   flex: 1;
   flex-direction: column;
   border: solid 1px;
   background-color: white;
-  border-radius: 0px;
+  border-radius: 3px;
   padding: 0px 4px 0px;
 }
 
 .edit_text {
-  /* align-self: flex-start; */
+  align-self: flex-start;
   margin-right: auto;
   text-align: left;
   padding-top: auto;
@@ -148,18 +148,7 @@
   overflow: auto;
   align-self: flex-start;
   flex: 1;
-  padding-bottom: 20;
-  margin-bottom: 15px;
+  width: 100%;
+  padding-bottom: 10;
+  margin: 5px;
 }
-
-@media (max-width: 25em) {
-  .listItem {
-    padding-top: 1px;
-  }
-}
-
-/* @media (max-width: 68em) {
-  .form {
-    left: 2.5rem;
-  }
-} */
