--- a/react-todo-app/src/TodoContainer/TodoContainer.module.css
+++ b/react-todo-app/src/TodoContainer/TodoContainer.module.css
@@ -128,100 +128,98 @@
   margin-top: 3px;
 }
 
-
-
 /* iPhone XR */
 @media only screen and (max-width: 414px) {
-.split_box {
-grid-template-columns: 1fr;
-}
-.right_pane {
-margin-left: 0;
-padding-left: 0;
-}
-.left_pane {
-margin-left: 0;
-padding-right: 0;
-padding-left: 0;
-}
-.tableId {
-font-size: 1.25rem;
-}
+  .split_box {
+    grid-template-columns: 1fr;
+  }
+  .right_pane {
+    margin-left: 0;
+    padding-left: 0;
+  }
+  .todo_container {
+    margin-left: 0;
+    padding-right: 0;
+    padding-left: 0;
+  }
+  .tableId {
+    font-size: 1rem;
+  }
 }
 
 /* iPad Air */
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-.split_box {
-grid-template-columns: 1fr 330px;
-}
-.right_pane {
-margin-left: 0;
-padding-left: 0;
-}
-.left_pane {
-margin-left: 0;
-padding-right: 0;
-padding-left: 0;
-}
-.tableId {
-font-size: 1.25rem;
-}
+  .split_box {
+    grid-template-columns: 1fr;
+  }
+  .right_pane {
+    margin-left: 0;
+    padding-left: 0;
+  }
+  .todo_container {
+    margin-left: 0;
+    padding-right: 0;
+    padding-left: 0;
+  }
+  .tableId {
+    font-size: 1.25rem;
+  }
 }
 
 /* iPad Mini */
 @media only screen and (min-width: 768px) and (max-width: 1024px) and (-webkit-min-device-pixel-ratio: 1.5),
-(min-resolution: 144dpi) {
-.split_box {
-grid-template-columns: 1fr 330px;
-}
-.right_pane {
-margin-left: 0;
-padding-left: 0;
-}
-.left_pane {
-margin-left: 0;
-padding-right: 0;
-padding-left: 0;
-}
-.tableId {
-font-size: 1.25rem;
-}
+  (min-resolution: 144dpi) {
+  .split_box {
+    grid-template-columns: 1fr;
+  }
+  .right_pane {
+    margin-left: 0;
+    padding-left: 0;
+  }
+  .todo_container {
+    margin-left: 0;
+    padding-right: 0;
+    padding-left: 0;
+  }
+  .tableId {
+    font-size: 1.25rem;
+  }
 }
 
 /* iMac 14' */
 @media only screen and (min-width: 1920px) and (max-width: 2560px) {
-.split_box {
-grid-template-columns: 1fr 330px;
-}
-.right_pane {
-margin-left: 20px;
-padding-left: 20px;
-}
-.left_pane {
-margin-left: 3rem;
-padding-right: auto;
-padding-left: auto;
-}
-.tableId {
-font-size: 1.4375rem;
-}
+  .split_box {
+    grid-template-columns: 1fr 330px;
+  }
+  .right_pane {
+    margin-left: 20px;
+    padding-left: 20px;
+  }
+  .todo_container {
+    margin-left: 3rem;
+    padding-right: auto;
+    padding-left: auto;
+  }
+  .tableId {
+    font-size: 1.4375rem;
+  }
 }
 
 /* iMac 16' */
 @media only screen and (min-width: 2560px) {
-.split_box {
-grid-template-columns: 1fr 330px;
-}
-.right_pane {
-margin-left: 20px;
-padding-left: 20px;
-}
-.left_pane {
-margin-left: 3rem;
-padding-right: auto;
-padding-left: auto;
-}
-.tableId {
-font-size: 1.4375rem;
-}
+  .split_box {
+    grid-template-columns: 1fr 330px;
+  }
+  .right_pane {
+    margin-left: 20px;
+    padding-left: 20px;
+  }
+  .todo_container {
+    margin-left: 3rem;
+    padding-right: auto;
+    padding-left: auto;
+  }
+  .tableId {
+    font-size: 1.4375rem;
+  }
 }
