--- a/react-todo-app/src/TodoContainer/TodoContainer.module.css
+++ b/react-todo-app/src/TodoContainer/TodoContainer.module.css
@@ -14,6 +14,9 @@
   display: grid;
   grid-template-columns: 1fr 330px;
   height: 100vh;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
 }
 
 /*--- this is the item description component---*/
@@ -45,7 +48,7 @@
   margin-top: 1rem;
   margin-bottom: 1rem;
   font-weight: 500;
-  /* font-family: "Roboto", sans-serif; */
+  /* font-family: "Roboto", sans-serif; add a custom font */
   text-decoration: none; /* add underline */
   cursor: pointer; /* add cursor on hover */
   transition: all 0.2s ease-in-out; /* add transition effect */
@@ -53,7 +56,7 @@
 
 .banner:hover {
   color: var(--error-color); /* change text color on hover */
-  text-shadow: 3px 2px 3px #91d5ff; /* add text shadow on hover */
+  text-shadow: 3px 2px 3px #68dcc5; /* add text shadow on hover */
   transform: scale(1.1); /* add scale effect on hover */
 }
 
@@ -73,6 +76,12 @@
 .todo_container {
   transition: left 0.25s;
   padding-left: 2rem;
+  .todo_container {
+  transition: left 0.25s;
+  padding-left: 10%;
+  margin-left: 70px; /* replace with the width of the sider */
+}
+
 }
 .todo_container.active {
   padding-left: 10%; /* Use percentage value */
@@ -153,13 +162,13 @@
     grid-template-columns: 1fr;
   }
   .right_pane {
-    margin-left: 0;
-    padding-left: 0;
+    margin: auto;
+    padding: auto;
   }
   .todo_container {
     margin-left: 0;
-    padding-right: 0;
-    padding-left: 0;
+    padding-right: auto;
+    padding-left: auto;
   }
   .tableId {
     font-size: 1.25rem;
@@ -173,13 +182,13 @@
     grid-template-columns: 1fr;
   }
   .right_pane {
-    margin-left: 0;
-    padding-left: 0;
+    margin: auto;
+    padding: auto;
   }
   .todo_container {
     margin-left: 0;
-    padding-right: 0;
-    padding-left: 0;
+    padding-right: auto;
+    padding-left: auto;
   }
   .tableId {
     font-size: 1.25rem;
@@ -187,16 +196,16 @@
 }
 
 /* iMac 14' */
-@media only screen and (min-width: 1920px) and (max-width: 2560px) {
+@media only screen and (min-width: 920px) and (max-width: 2560px) {
   .split_box {
-    grid-template-columns: 1fr 330px;
+    grid-template-columns: 1fr;
   }
   .right_pane {
-    margin-left: 20px;
-    padding-left: 20px;
+    margin: auto;
+    padding: auto;
   }
   .todo_container {
-    margin-left: 3rem;
+    margin-left: 0;
     padding-right: auto;
     padding-left: auto;
   }
@@ -208,14 +217,14 @@
 /* iMac 16' */
 @media only screen and (min-width: 2560px) {
   .split_box {
-    grid-template-columns: 1fr 330px;
+    grid-template-columns: 1fr;
   }
   .right_pane {
-    margin-left: 20px;
-    padding-left: 20px;
+    margin: 1rem;
+    padding: auto;
   }
   .todo_container {
-    margin-left: 3rem;
+    margin-left: auto;
     padding-right: auto;
     padding-left: auto;
   }
@@ -223,3 +232,28 @@
     font-size: 1.4375rem;
   }
 }
+@media screen and (max-width: 767px) {
+  .image_link {
+    width: 6rem;
+    height: 6rem;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .left_pane,
+  .right_pane {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+/* @media only screen and (max-width: 768px) {
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .left_pane,
+  .right_pane {
+    flex: 0 0 calc(50% - 10px);
+    padding: 10px;
+  }
+} */
