--- a/react-todo-app/src/TodoContainer/Components/InputWithLabel/InputWithLabel.module.css
+++ b/react-todo-app/src/TodoContainer/Components/InputWithLabel/InputWithLabel.module.css
@@ -1,5 +1,5 @@
 .input_label {
-  background-color: #e6f7ff;
+  background-color: white;
   border: none;
   outline-color: var(--border-color-base);
   width: 100%;
