--- a/react-todo-app/src/TodoContainer/Components/ItemDescription/ItemDescription.module.css
+++ b/react-todo-app/src/TodoContainer/Components/ItemDescription/ItemDescription.module.css
@@ -80,17 +80,5 @@ li {
   border: 1px solid var(--border-color-base);
   /* border: none; */
   font-size: 14px;
-  autoSize: true;
+  autosize: true;
 }
-
-/* @media (max-width: 35em) {
-  .text_area {
-    width: 100%;
-    min-height: 24vh;
-  }
-
-  .button-wrapper {
-    margin-left: auto;
-    margin-right: auto;
-  }
-} */
