--- a/react-todo-app/src/TodoContainer/Components/AddTodoForm/AddTodoForm.module.css
+++ b/react-todo-app/src/TodoContainer/Components/AddTodoForm/AddTodoForm.module.css
@@ -9,15 +9,21 @@
 }
 
 .add_button {
-  background-color: #E6F7FF;
-  color: #393d40;
-  width: 30px;
-  height: 30px;
-  border-color: #62929e;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* width: 1em; */
+  /* height: 1em; */
+  font-size: 25px;
+  border-color: var(--border-color);
   border-top: 1px;
   border-left: 1px;
   border-bottom: 1px;
   border-right: 1px;
   cursor: pointer;
-  margin-left: 1px;
+  margin-left: 5px;
+  margin-right: 2px;
+
 }
