--- a/react-todo-app/src/TodoContainer/TodoContainer.module.css
+++ b/react-todo-app/src/TodoContainer/TodoContainer.module.css
@@ -14,6 +14,15 @@
 }
 
 /*--- AddForm and TodoList component ---*/
+.container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  border: none;
+  flex-direction: column;
+  height: 100vh;
+}
+
 .todo_list {
   background-color: var(--background-color);
   /* border: 1px solid var(--border-color-base); */
