--- a/react-todo-app/src/TodoContainer/Components/AddTodoForm/AddTodoForm.module.css
+++ b/react-todo-app/src/TodoContainer/Components/AddTodoForm/AddTodoForm.module.css
@@ -4,8 +4,10 @@
   margin-right: 5px;
   border: 1px solid black;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
+  align-items: center;
   padding: 5px;
+  width: 100%;
 }
 
 .add_button {
