--- a/react-todo-app/src/TodoContainer/TodoContainer.module.css
+++ b/react-todo-app/src/TodoContainer/TodoContainer.module.css
@@ -17,26 +17,27 @@
 .container {
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   border: none;
   flex-direction: column;
-  height: 100vh;
+  height: 90vh;
 }
 
 .todo_list {
   background-color: var(--background-color);
   /* border: 1px solid var(--border-color-base); */
   display: flex;
-  justify-content: space-between;
-  align-items: flex;
+  justify-content: flex-start;
+  align-items: center;
   border: none;
   flex-direction: column;
-  height: 100%;
-  /* overflow-y: auto; */
-  padding: auto;
-  min-height: 70%;
+  height: 90vh;
+  overflow-y: auto;
+  padding: 0;
+  min-height: 90%;
   width: 100%;
-  margin: auto;
+  max-width: 50rem;
+  margin: 3rem;
 }
 
 .banner {
