--- a/react-todo-app/src/TodoContainer/TodoContainer.module.css
+++ b/react-todo-app/src/TodoContainer/TodoContainer.module.css
@@ -37,7 +37,7 @@
   min-height: 90%;
   width: 100%;
   max-width: 50rem;
-  margin: 3rem;
+  margin: 3 0 rem;
 }
 
 .banner {
@@ -75,7 +75,7 @@
   width: 10rem;
   height: 10rem;
   display: block;
-  margin: auto;
+  margin: .5rem auto;
   cursor: pointer;
   border: 4px solid var(--primary-color);
   border-radius: 50%; /* make the border circular */
@@ -86,7 +86,7 @@
 .image_link img {
   display: block;
   max-width: 100%;
-  height: auto;
+  /* height: auto; */
   border: 1px solid white; /* add the inner white border to the image */
   border-radius: 50%; /* make the image circular */
 }
