--- a/react-todo-app/src/TodoContainer/TodoContainer.module.css
+++ b/react-todo-app/src/TodoContainer/TodoContainer.module.css
@@ -20,7 +20,8 @@
   align-items: flex-start;
   border: none;
   flex-direction: column;
-  height: 90vh;
+  height: auto;
+  margin-top: 5rem;
 }
 
 .todo_list {
@@ -31,7 +32,7 @@
   align-items: center;
   border: none;
   flex-direction: column;
-  height: 90vh;
+  height: 100vh;
   overflow-y: auto;
   padding: 0;
   min-height: 90%;
@@ -75,7 +76,7 @@
   width: 10rem;
   height: 10rem;
   display: block;
-  margin: .5rem auto;
+  margin: 0.5rem auto;
   cursor: pointer;
   border: 4px solid var(--primary-color);
   border-radius: 50%; /* make the border circular */
@@ -86,9 +87,10 @@
 .image_link img {
   display: block;
   max-width: 100%;
-  /* height: auto; */
+  height: auto;
   border: 1px solid white; /* add the inner white border to the image */
   border-radius: 50%; /* make the image circular */
+  object-fit: contain;
 }
 
 /*Sort button*/
